--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 packages = [{include = "gendiff"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
+pyyaml = "^6.0"
 
 
 [tool.poetry.group.dev.dependencies]
